testCases/overloading/test2.uni
main(){

	a = 101b; 
	a = 111b; //invalid because of overloading
	print x: a;  
	out: a<3>; 
}		
neigh!	
//error 
